Add Flappy Bird and Pong games

--- a/games/pong.html
+++ b/games/pong.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flappy Bird</title>
+    <title>Pong Game</title>
 </head>
 <body>
-    <canvas id="flappyBirdGame" width="320" height="480"></canvas>
+    <canvas id="pongGame" width="800" height="400"></canvas>
     <script src="https://cdn.example.com/games/game-logic.js"></script>
     <script>
-        initializeGames('flappyBirdGame', 'flappyBird');
+        initializeGames('pongGame', 'pong');
     </script>
 </body>
 </html>
